[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "telegrab"
version = "0.0.6"
description = "A tool for downloading files from Telegram."
authors = [
    "James Hodgkinson <james@terminaloutcomes.com>",
]
license = "MIT"
keywords = [
    "download",
    "telegram",
    "images",
    "image",
    "jpeg",
    "jpg",
]

[tool.poetry.dependencies]
python = "^3.9"
Telethon = "^1.24.0"
click = "^8.0.4"
questionary = ">=1.10,<3.0"
pydantic = ">=1.9,<3.0"
loguru = ">=0.6,<0.8"

[tool.poetry.dev-dependencies]
pylint = "^3.0.1"
pytest = "^8.0.0"
black = "^24.1.0"
mypy = "^1.0"
pylint-pydantic = "^0.3.0"

[tool.poetry.scripts]
telegrab = "telegrab.__main__:cli"

[project]
name = "telegrab"
description = "A tool for downloading files from Telegram."
license = "MIT"
version = "0.0.6"
keywords = [
    "download",
    "telegram",
    "images",
    "image",
    "jpeg",
    "jpg",
]
authors = [
    { name = "James Hodgkinson", email = "james@terminaloutcomes.com" },
]

[project.scripts]
telegrab = "telegrab.__main__:cli"
