[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "telegrab"
description = "A tool for downloading files from Telegram."
license = { text = "MIT" }
version = "0.0.6"
keywords = ["download", "telegram", "images", "image", "jpeg", "jpg"]
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
requires-python = ">=3.12"
dependencies = [
    "Telethon>=1.42.0",
    "click>=8.0.4",
    "questionary>=1.10",
    "pydantic>=1.9",
    "loguru>=0.6",
]

[project.scripts]
telegrab = "telegrab.__main__:cli"

[dependency-groups]
dev = [ #toml reflow avoider
    "pytest>=8.0.0",
    "mypy>=1.0",
    "ty>=0.0.24",
    "ruff>=0.15.7",
    "coverage>=7.13.5",
    "pytest-asyncio>=1.3.0",
]
